tests/output/self_hosted/double_plus_front_error.txt
tests/double_plus_front_error.oomph:2: error: should be an expression

    print(++thing)
          ^

